--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,8 @@ layout: default
   }
 
   article header h1 {
-    font-weight : 200;
+    font-weight : 900;
+    text-transform : uppercase;
 
   }
 
@@ -47,17 +48,33 @@ layout: default
       </time>
   </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 ml-auto mr-auto">
 
-  {%- if page.author -%}
+        {{ content }}
 
-    <div class="author">
-      <p>{{ page.author }}</p>
+        <div class="card bg-light mt-5 mb-5">
+          <div class="card-body">
+            <div class="row justify-content-center text-center text-sm-left">
+              <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center pr-sm-3 pb-3 pb-sm-0">
+                <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
+              </div>
+              <div class="col-sm">
+                <h5>{{page.author}}</h5>
+                <p class="text-dark">Créateur du site Qambium. Comment dire, "Je comprends vite, mais il faut expliquer longtemps !" :)</p>
+                <p class="text-dark">Follow <a class="text-dark" href="https://www.instagram.com/marcusbonus67/">@Instagram</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
+  </div>
+  <!-- .container -->
 
-  {%- endif -%}</p>
+
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
