Added the members data file and date.html include file 	new file:   _data/members.yml 	new file:   _includes/date.html 	modified:   _layouts/home.html 	modified:   _layouts/post.html 	modified:   _site/bricolage/2018/11/20/encore-un-essai.html 	modified:   _site/bricolage/2018/11/23/fabrictation-du-poullailler.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	modified:   _site/jekyll/update/2015/07/04/welcome-to-jekyll.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -87,7 +87,7 @@ layout: default
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{post.date | date: "%d/%m/%Y"}} - {{post.author}}</h6>
+                <h6 class="card-subtitle mb-2 text-muted">{%- include date.html -%} - {{post.author}}</h6>
                 <p class="card-text">{{post.excerpt}}</p>
 
               </div>
