Updated navbar and commitstats directive 	modified:   _includes/navbar.html 	modified:   _layouts/home.html 	modified:   _layouts/page.html 	modified:   _site/404.html 	modified:   _site/about/index.html 	modified:   _site/blog/index.html 	modified:   _site/bricolage/2018/11/20/encore-un-essai.html 	modified:   _site/bricolage/2018/11/23/fabrictation-du-poullailler.html 	modified:   _site/contact/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	modified:   _site/jekyll/update/2015/07/04/welcome-to-jekyll.html 	modified:   contact.md

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -139,7 +139,7 @@ layout: default
           if(scope.url != null && scope.url != ""){
             $http({
               method: 'GET',
-              url: scope.url + 'commits'
+              url: scope.url + 'commits?access_token=24b8f31a7e7b321d18a1b9dc76ec1aec75694d92'
             }).then(function successCallback(response) {
               scope.commits = response.data.length +
               ' commit' +
@@ -148,7 +148,7 @@ layout: default
 
             $http({
               method: 'GET',
-              url: scope.url + 'stats/contributors'
+              url: scope.url + 'stats/contributors?access_token=24b8f31a7e7b321d18a1b9dc76ec1aec75694d92'
             }).then(function successCallback(response) {
               scope.contributors = response.data.length +
               ' contributeur' +
