--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,19 +11,26 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+    <ul class="navbar-nav ">
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://qambium.fr/Woodstock.js">Woodstock.js</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://qambium.fr/Woodstock.js">Ecoflore</a>
+      </li>
+
+    </ul>
 
     <ul class="navbar-nav ml-auto mr-5 ">
 
       <li class="nav-item">
-        <a class="nav-link {%- if page.url == 'about' -%} {{ ' btn btn-primary' }} {%- endif -%}" href="{{ '/about/' | relative_url }}">À propos</a>
+        <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/blog/' | relative_url }}">Blog</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link {%- if page.url == 'blog' -%} {{ ' btn btn-primary' }} {%- endif -%}" href="{{ '/blog/' | relative_url }}">Blog</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link {%- if page.url == 'contact' -%} {{ ' btn btn-primary' }} {%- endif -%}" href="{{ '/contact/' | relative_url }}">Contact</a>
+        <a class="nav-link {%- if page.url contains 'contact' -%} {{ ' active' }} {%- endif -%}" href="{{ '/contact/' | relative_url }}">Contact</a>
       </li>
 
     </ul>
