--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,23 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 ml-auto mr-auto">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+      <article class="post mt-5 mb-5">
 
-  <div class="post-content">
-    {{ content }}
+        <header class="post-header">
+          <h1 class="post-title">{{ page.title | escape }}</h1>
+        </header>
+
+        <div class="post-content">
+          {{ content }}
+        </div>
+
+      </article>
+
+    </div>
   </div>
-
-</article>
+</div>
+<!--.container  -->
