--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,7 +83,7 @@ layout: default
           <div id="disqus_thread"></div>
           <script>
             var disqus_config = function () {
-              this.page.url = '{{ page.url | absolute_url }}';
+              this.page.url = 'qambium.fr';
               this.page.identifier = '{{ page.url | absolute_url }}';
             };
             (function() {
