--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
 
         {{ content }}
 
-        <div class="card bg-light mt-5 mb-5">
+        <div class="card mt-5 mb-5">
           <div class="card-body p-5">
             <div class="row justify-content-center text-center text-sm-left">
               <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center pr-sm-3 pb-3 pb-sm-0">
@@ -80,20 +80,25 @@ layout: default
 
         {% if jekyll.environment == "production" %}
 
-          <div id="disqus_thread"></div>
-          <script>
-            var disqus_config = function () {
-              this.page.url = '{{ page.url | absolute_url }}';
-              this.page.identifier = '{{ page.url | absolute_url }}';
-            };
-            (function() {
-              var d = document, s = d.createElement('script');
-              s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a></noscript>
+          <div class="card bg-light">
+            <div class="card-body">
+              <div id="disqus_thread"></div>
+              <script>
+                var disqus_config = function () {
+                  this.page.url = '{{ page.url | absolute_url }}';
+                  this.page.identifier = '{{ page.url | absolute_url }}';
+                };
+                (function() {
+                  var d = document, s = d.createElement('script');
+                  s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
+                  s.setAttribute('data-timestamp', +new Date());
+                  (d.head || d.body).appendChild(s);
+                })();
+              </script>
+              <noscript>Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a></noscript>
+            </div>
+          </div>
+
         {% endif %}
 
       </div>
