Changement du thème ... 	modified:   .gitignore 	modified:   _config.yml 	modified:   _data/applications.yml 	modified:   _data/members.yml 	modified:   _includes/date.html 	modified:   _includes/footer.html 	modified:   _includes/navbar.html 	modified:   _layouts/blog.html 	new file:   _layouts/dashboard.html 	modified:   _layouts/home.html 	modified:   _layouts/post.html 	modified:   _posts/2018-11-23-fabrictation-du-poullailler.md 	new file:   _posts/2018-12-01-mes-applications.md 	new file:   _posts/2018-12-01-woodstock.js-presentation.md 	modified:   _site/404.html 	modified:   _site/about/index.html 	modified:   _site/assets/css/Qambium.css 	new file:   _site/blog/apps/mes-applications.html 	new file:   _site/blog/apps/woodstock.js-presentation.html 	renamed:    _site/bricolage/2018/11/20/encore-un-essai.html -> _site/blog/bricolage/encore-un-essai.html 	renamed:    _site/bricolage/2018/11/23/fabrictation-du-poullailler.html -> _site/blog/bricolage/fabrictation-du-poullailler.html 	modified:   _site/blog/index.html 	renamed:    _site/jekyll/update/2015/07/04/welcome-to-jekyll.html -> _site/blog/jekyll/update/welcome-to-jekyll.html 	modified:   _site/contact/index.html 	new file:   _site/dashboard/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	modified:   assets/css/Qambium.css 	new file:   dashboard.md

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -1,6 +1,6 @@
 {% if page.date %}
   {% assign m = page.date | date: "%-m" %}
-  {{ page.date | date: "%-d" }}
+  {{ page.date | date: "%d" }}
   {% case m %}
     {% when '1' %}Jan
     {% when '2' %}Fev
@@ -20,7 +20,7 @@
 
 {% if post.date %}
   {% assign m = post.date | date: "%-m" %}
-  {{ post.date | date: "%-d" }}
+  {{ post.date | date: "%d" }}
   {% case m %}
     {% when '1' %}Jan
     {% when '2' %}Fev
