--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="footer mt-5">
+<div class="footer">
 
   <i class="far fa-copyright"></i>
   Copyright 2015
@@ -9,13 +9,15 @@
 
 <style media="screen">
   .footer {
-    color : var(--secondary);
-    margin-bottom : 3rem;
+    border-top : 1px #ddd solid;
+    color : var(--dark);
+    padding-top : 3rem;
+    padding-bottom : 3rem;
     text-align : center;
   }
 
   .footer a {
-    color : var(--dark);
+
     font-size : 10rem;
     text-decoration : none;
   }
