--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white border-bottom">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
 
   {%- assign default_paths = site.pages | map: "path" -%}
   {%- assign page_paths = site.header_pages | default: default_paths -%}
@@ -12,6 +12,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
     <ul class="navbar-nav ">
+
+      <li class="nav-item">
+        <a class="nav-link" href="https://qambium.fr/Qenobi.js">Qenobi</a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link" href="https://qambium.fr/Woodstock.js">Woodstock.js</a>
@@ -39,7 +43,33 @@
 </nav>
 
 <style media="screen">
+
+  .navbar-brand {
+    /* font-size : 1.4rem !important; */
+    font-weight: 800;
+    text-transform : uppercase;
+  }
+
+  .navbar .navbar-nav .nav-link {
+    text-transform : uppercase;
+    color : rgba(0,0,0,.6);
+  }
+
+  .navbar .navbar-nav .nav-link:hover {
+    text-transform : uppercase;
+    color : rgba(0,0,0,.5);
+  }
+
+  .navbar .navbar-nav .nav-link.active {
+    text-transform : uppercase;
+    color : rgba(0,0,0,.8);
+    padding-bottom : 2px;
+    padding-left :0px;
+    padding-right : 0px;
+    border-bottom : 2px solid var(--green);
+  }
+
   body {
-    padding-top : 57px;
+    padding-top : 72px;
   }
 </style>
