--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="site-header d-flex align-items-center justify-content-start border-bottom" style = "height : calc(100vh - 57px); ">
+<div class="site-header d-flex align-items-center justify-content-start" style = "height : calc(100vh - 57px); ">
 
   <!-- <div class="container"> -->
     <!-- <div class="d-flex align-items-end justify-content-start"> -->
@@ -15,60 +15,9 @@ layout: default
 
 </div>
 
-<div class="bg-light border-bottom" style = "padding : 3rem 0rem;">
-
-  <div class="container">
 
 
-        <h2 class = "mb-5 text-center">Derniers articles</h2>
-
-        <div class="card-deck">
-
-          {% for post in site.posts limit: 3 %}
-
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">{{ post.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{%- include date.html -%} - {{post.author}}</h6>
-                <p class="card-text">{{post.excerpt}}</p>
-
-              </div>
-              <div class="card-footer bg-white text-center">
-                <a href="{{post.url}}" class="card-link">Lire l'article...</a>
-              </div>
-            </div>
-
-            <!-- <li class="list-group-item p-5 ">
-
-              <div class="d-flex justify-content-between">
-                <a href="{{post.url}}"><h4>{{ post.title }}</h4></a>
-                <span class = "ml-3 text-secondary">{{post.date | date: "%d/%m/%Y"}}</span>
-              </div>
-
-              <div class="text-secondary">
-                <p >{{post.excerpt}}</p>
-              </div>
-
-              <a class = "float-right" href="{{post.url}}">lire l'article...</a>
-
-            </li> -->
-
-          {% endfor %}
-
-        </div>
-
-
-        <div class = "text-center mt-5">
-          <a class = "more-posts" href="/blog"> Plus d'articles ...</a>
-        </div>
-
-
-  </div>
-  <!-- .container -->
-
-</div>
-
-<div class="pt-5">
+<div class="pt-5 bg-light">
   <div class="container">
 
     <div class="row">
@@ -76,31 +25,29 @@ layout: default
 
         <h2 class = "mb-5" style = "font-weight : 900; text-transform : uppercase;">Applications</h2>
 
-        <p>
-          J'adore bidouiller, concevoir et fabriquer des choses. Pour moi la programmation est donc un régal. Et puis autant que ce soit utiles ! Mes application sont donc toutes <a href="https://fr.wikipedia.org/wiki/Mouvement_du_logiciel_libre">open source</a>.
-          C'est en particulier la programmation d'application web qui me fascine. Mais sont inconvennient majeur est qu'elle nécessite un serveur web pour heberger l'application.
-          <a href="https://github.com">Github</a> propose d'heberger le code source d'applciation sous la forme de dépot <a href="https://fr.wikipedia.org/wiki/Git">Git</a>.
-          Et permet également d'héberger des sites statiques.
-        </p>
-        <p>
-          C'est pourquoi j'ai décidé d'heberger mes applications sur <a href="https://pages.github.com">Github Pages</a>. Contrairement à un site dynamique, le site statique n'a pas reccours à du code coté serveur (par ex PHP) pour intéroger des bases de données
-          et produire du contenu de manière dynamique.
-          Cette logique ma donc contraint à développer des application web s'executtant sur le navigateur du client après chargement du nécessaire depuis le serveur... Bref... Je vous ai perdu (mais c'est déjà énorme que vous ayez lu jusque ici), ce sont des <a href="https://fr.wikipedia.org/wiki/Application_web_monopage">"Single Page Applications"</a> développées en javascript et utilisant le Framework <a href="https://fr.wikipedia.org/wiki/AngularJS">AngularJS</a>.
+        <p>J'adore bidouiller, concevoir et fabriquer des choses. Pour moi la programmation est donc un régal ! Autant que ce soit utile, mes applications sont toutes <a href="https://fr.wikipedia.org/wiki/Mouvement_du_logiciel_libre">open source</a>.
+          C'est en particulier la programmation d'application web qui me fascine. Plus particulièrement les <a href="https://fr.wikipedia.org/wiki/Application_web_monopage">"Single Page Applications" (SPA)</a> (ou application mono-pages en français).
+          <a href="/programmation/2018/12/01/mes-applications.html">En savoir plus ...</a>
         </p>
 
-        <div class="mt-5 mb-5 card-deck" ng-app = "QambiumHome">
+
+
+        <div class="mt-3 mb-5 row" ng-app = "QambiumHome">
           {% for app in site.data.applications%}
 
-            <div class="card mb-3" style = "flex-basis : 40%">
-              <div class="card-body">
-                <h5 class="card-title">{{app.name}}</h5>
-                <h6 class="card-subtitle mb-2 text-muted"><repostats url = "https://api.github.com/repos/{{app.github}}/"></repostats></h6>
-                <p class="card-text">{{app.description}}</p>
+            <div class="col-6 ml-auto mr-auto">
+              <div class="card mb-3">
+                <div class="card-body">
+                  <h5 class="card-title">{{app.name}}</h5>
+                  <p class="card-text">{{app.description}}</p>
 
-              </div>
-              <div class="card-footer">
-                <a href="{{app.link}}" class="card-link">Utiliser</a>
-                <a href="https://github.com/{{app.github}}" class="card-link">Code Source</a>
+                </div>
+                <div class="card-footer">
+                  {% if app.link %} <a href="{{app.link}}" class="card-link"><i class="fas fa-mouse-pointer"></i> Voir</a> {% endif %}
+                  {% if app.github %} <a href="https://github.com/{{app.github}}" class="card-link"><i class="fas fa-code"></i> Code Source</a> {% endif %}
+                  {% if app.more %} <a href="{{app.more}}" class="card-link"><i class="fas fa-question-circle"></i> En savoir plus...</a> {% endif %}
+
+                </div>
               </div>
             </div>
 
@@ -114,50 +61,45 @@ layout: default
   <!-- .container -->
 </div>
 
-<script type="text/javascript">
 
-  var QH = angular.module('QambiumHome', [], function($interpolateProvider) {
-      $interpolateProvider.startSymbol('{n_');
-      $interpolateProvider.endSymbol('_g}');
-  });
-  QH.directive('repostats', function($http){
-    return {
-      restrict: 'E',
-      // transclude: true,
-      template : '<i class="fas fa-undo-alt"></i> <span ng-bind = "commits"></span> - <i class="fas fa-users"></i> <span ng-bind = "contributors"></span>',
-      scope: {
-        url : '@url'
-      },
-      link: function(scope, elem, attr) {
+<div class="pt-5 pb-5" >
 
-        scope.commits = 0;
-        scope.branches = 0;
-        scope.contributors = 0;
+  <div class="container">
 
-        scope.$watch('url', function(url){
-          scope.url = url;
-          if(scope.url != null && scope.url != ""){
-            $http({
-              method: 'GET',
-              url: scope.url + 'commits?access_token=24b8f31a7e7b321d18a1b9dc76ec1aec75694d92'
-            }).then(function successCallback(response) {
-              scope.commits = response.data.length +
-              ' commit' +
-              (response.data.length > 1 ? 's' : '');
-            }, function errorCallback(response) {console.error(response);});
+    <div class="row">
+      <div class="col-md-10 ml-auto mr-auto">
 
-            $http({
-              method: 'GET',
-              url: scope.url + 'stats/contributors?access_token=24b8f31a7e7b321d18a1b9dc76ec1aec75694d92'
-            }).then(function successCallback(response) {
-              scope.contributors = response.data.length +
-              ' contributeur' +
-              (response.data.length > 1 ? 's' : '');
-            }, function errorCallback(response) {console.error(response);});
+        <h2>Le Blog</h2>
+        <p class = "mb-5">Voici les derniers articles. Pour en voir plus allez sur le  <a href="/blog">Blog</a> !</p>
 
-          }
-        });
-      }
-    }
-  });
-</script>
+
+
+          <div class="row pl-0">
+            {% for post in site.posts limit: 3 %}
+
+              <div class="col" >
+
+                  <h5 class="card-title">{{ post.title }}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">{%- include date.html -%} - {{post.author}}</h6>
+                  <p class="card-text">{{post.excerpt}}</p>
+
+                  <!-- <div class="d-flex"> -->
+                    <a href="{{post.url}}" class="card-link ml-auto">Lire la suite...</a>
+                  <!-- </div> -->
+
+                <!-- <div class="card-footer bg-white text-center">
+                  <a href="{{post.url}}" class="card-link">Lire l'article...</a>
+                </div> -->
+              </div>
+
+            {% endfor %}
+          </div>
+
+
+      </div>
+    </div>
+
+  </div>
+  <!-- .container -->
+
+</div>
