--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,109 +4,169 @@ layout: default
 
 <style media="screen">
 
-  article header {
-    text-align : center;
-    margin-top : 8rem;
+
+
+  .blog-post header {
+    height : calc(100vh - 72px);
+    display : flex;
+    align-items : center;
+    justify-content : center;
+
+    background : #fcfff5 !important;
   }
 
-  article header h1 {
-    font-weight : 900;
-    text-transform : uppercase;
+    .blog-post header time {
+      font-weight : 300;
+      font-size : 1.3rem !important;
 
-  }
+    }
 
-  article header .post-meta {
-    margin-top : 2rem;
-    margin-bottom : 4rem;
+    .blog-post header h1 {
+      margin-top : 1rem;
+      font-size : 3rem;
+    }
 
-    font-weight : 200;
-    color : rgb(172, 180, 184);
-    text-transform : uppercase;
-  }
+    .blog-post header p {
+      font-weight : 200;
+      font-size : 1.3rem !important;
+    }
 
-  article p {
-    color : var(--secondary);
-  }
-
-  article .author {
-    border-top : 1px solid rgba(0,0,0,0.1);
-    border-bottom : 1px solid rgba(0,0,0,0.1);
-    margin-top : 3rem;
-    margin-bottom : 3rem;
+  .blog-post article {
     padding-top : 3rem;
-    padding-bottom : 3rem;
   }
-</style>
-<article>
 
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- include date.html -%}
-      </time>
+    .blog-post article p {
+      /* color : var(--secondary); */
+      font-size : 20px;
+      font-weight : 300;
+    }
+
+</style>
+
+<div class="blog-post">
+
+  <header>
+    <div class = "col-md-8 ml-auto mr-auto">
+
+        <time datetime="{{ page.date | date_to_xmlschema }}">
+          {%- include date.html -%}
+        </time>
+
+      <h1 class="post-title">{{ page.title | escape }}</h1>
+
+      <p class = "post-description">{{ page.excerpt}}</p>
+    </div>
   </header>
 
-  <div class="container">
-    <div class="row">
+  <article>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 ml-auto mr-auto">
+
+          {{ content }}
+
+        </div>
+      </div>
+    </div>
+
+  </article>
+
+  <style media="screen">
+    .blog-post .author {
+      background : var(--light);
+      margin-top : 3rem;
+      color : #333;
+    }
+
+      .blog-post .author p {
+        font-weight : 200;
+        margin : 0px;
+        font-size : 20px;
+      }
+      .blog-post .author h5 {
+        margin-top : 0;
+        font-size : 2.5rem;
+      }
+  </style>
+
+  <div class="author">
+
+    <div class="container">
       <div class="col-md-8 ml-auto mr-auto">
 
-        {{ content }}
+        <div class="row pt-5 pb-5 justify-content-center text-center text-sm-left">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center ">
+            <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
+          </div>
+          <div class="col-sm">
 
-        <div class="card mt-5 mb-5">
-          <div class="card-body p-5">
-            <div class="row justify-content-center text-center text-sm-left">
-              <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center pr-sm-3 pb-3 pb-sm-0">
-                <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
-              </div>
-              <div class="col-sm">
+            {% assign author = site.data.members[page.author] %}
 
-                {% assign author = site.data.members[page.author] %}
-
-                <h5>{{page.author}}</h5>
-                <p class="text-dark">{{author.description}}</p>
-                <p class="text-dark">
-                  {% if author.social.instagram %}
-                    <a class="text-dark" href="{{author.social.instagram}}">@Instagram</a>
-                  {% endif %}
-                  {% if author.social.email %}
-                    <a class="text-dark" href="mailto:{{author.social.email}}">@Email</a>
-                  {% endif %}
-                </p>
-              </div>
-            </div>
+            <h5>{{page.author}}</h5>
+            <p>{{author.description}}</p>
+            <p>
+              {% if author.social.instagram %}
+                <a href="{{author.social.instagram}}">@Instagram</a>
+              {% endif %}
+              {% if author.social.email %}
+                <a href="mailto:{{author.social.email}}">@Email</a>
+              {% endif %}
+            </p>
           </div>
         </div>
 
-        {% if jekyll.environment == "production" %}
+      </div>
+    </div>
 
-          <div class="card bg-light">
-            <div class="card-body">
-              <div id="disqus_thread"></div>
-              <script>
-                var disqus_config = function () {
-                  this.page.url = '{{ page.url | absolute_url }}';
-                  this.page.identifier = '{{ page.url | absolute_url }}';
-                };
-                (function() {
-                  var d = document, s = d.createElement('script');
-                  s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-                  s.setAttribute('data-timestamp', +new Date());
-                  (d.head || d.body).appendChild(s);
-                })();
-              </script>
-              <noscript>Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a></noscript>
+  </div>
+  <!-- .authors -->
+
+  <style media="screen">
+    .blog-post .comments {
+      margin-top : 3rem;
+      margin-bottom : 3rem;
+    }
+  </style>
+
+  <div class="comments">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 ml-auto mr-auto">
+
+
+          <!-- <h3>Commentaires</h3> -->
+          {% if jekyll.environment == "production" %}
+
+            <div class="card">
+              <div class="card-body">
+                <div id="disqus_thread"></div>
+                <script>
+                  var disqus_config = function () {
+                    this.page.url = '{{ page.url | absolute_url }}';
+                    this.page.identifier = '{{ page.url | absolute_url }}';
+                  };
+                  (function() {
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                  })();
+                </script>
+                <noscript>Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a></noscript>
+              </div>
             </div>
-          </div>
 
-        {% endif %}
+          {% else %}
+            <div class="alert alert-danger">
+              Disqus est disponible uniquement en mode production.
+            </div>
+          {% endif %}
 
+        </div>
       </div>
     </div>
   </div>
-  <!-- .container -->
+  <!-- .comments -->
 
-
-
-  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-</article>
+</div>
