Modification du footer 	modified:   _includes/footer.html 	modified:   _layouts/post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -114,10 +114,12 @@ layout: default
               {% endif %}
             </p>
           </div>
+
         </div>
 
       </div>
     </div>
+    <!-- .container -->
 
   </div>
   <!-- .authors -->
@@ -138,34 +140,39 @@ layout: default
           <!-- <h3>Commentaires</h3> -->
           {% if jekyll.environment == "production" %}
 
-            <div class="card">
-              <div class="card-body">
-                <div id="disqus_thread"></div>
-                <script>
-                  var disqus_config = function () {
-                    this.page.url = '{{ page.url | absolute_url }}';
-                    this.page.identifier = '{{ page.url | absolute_url }}';
-                  };
-                  (function() {
-                    var d = document, s = d.createElement('script');
-                    s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                  })();
-                </script>
-                <noscript>Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a></noscript>
-              </div>
+          <div id="disqus_thread"></div>
+          <script>
+            var disqus_config = function () {
+              this.page.url = '{{ page.url | absolute_url }}';
+              this.page.identifier = '{{ page.url | absolute_url }}';
+            };
+            (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>
+            <div class="alert alert-danger">
+              Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a>
             </div>
+          </noscript>
 
           {% else %}
+
             <div class="alert alert-danger">
               Disqus est disponible uniquement en mode production.
             </div>
+
           {% endif %}
 
         </div>
+
       </div>
     </div>
+    <!-- .container -->
+
   </div>
   <!-- .comments -->
 
