--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,6 +77,7 @@ layout: default
           <div class="row pl-0">
             {% for post in site.posts limit: 3 %}
 
+            {% if jekyll.environment == "production" && post.prod == true %}
               <div class="col" >
 
                   <h5 class="card-title">{{ post.title }}</h5>
@@ -91,6 +92,26 @@ layout: default
                   <a href="{{post.url}}" class="card-link">Lire l'article...</a>
                 </div> -->
               </div>
+
+            {% else %}
+
+              <div class="col" >
+
+                  <h5 class="card-title">{{ post.title }}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">{%- include date.html -%} - {{post.author}}</h6>
+                  <p class="card-text">{{post.excerpt}}</p>
+
+                  <!-- <div class="d-flex"> -->
+                    <a href="{{post.url}}" class="card-link ml-auto">Lire la suite...</a>
+                  <!-- </div> -->
+
+                <!-- <div class="card-footer bg-white text-center">
+                  <a href="{{post.url}}" class="card-link">Lire l'article...</a>
+                </div> -->
+              </div>
+            {% endif %}
+
+
 
             {% endfor %}
           </div>
