Correction de l'erreur d'environnement sur la liste des posts du layout home. 	modified:   _layouts/home.html 	modified:   _site/feed.xml 	modified:   _site/index.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -93,7 +93,11 @@ layout: default
                 </div> -->
               </div>
 
-            {% else %}
+
+            {% endif %}
+
+
+            {% if jekyll.environment != "production" %}
 
               <div class="col" >
 
@@ -109,8 +113,8 @@ layout: default
                   <a href="{{post.url}}" class="card-link">Lire l'article...</a>
                 </div> -->
               </div>
+              
             {% endif %}
-
 
 
             {% endfor %}
