Ajout de and dans la condition dans le layout home 	modified:   _layouts/home.html 	modified:   _site/feed.xml 	modified:   _site/index.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,7 +77,7 @@ layout: default
           <div class="row pl-0">
             {% for post in site.posts limit: 3 %}
 
-            {% if jekyll.environment == "production" && post.prod == true %}
+            {% if jekyll.environment == "production" and post.prod == true %}
               <div class="col" >
 
                   <h5 class="card-title">{{ post.title }}</h5>
@@ -113,7 +113,7 @@ layout: default
                   <a href="{{post.url}}" class="card-link">Lire l'article...</a>
                 </div> -->
               </div>
-              
+
             {% endif %}
 
 
