Changements provisoires pour un rendu public... 	modified:   _config.yml 	modified:   _data/applications.yml 	modified:   _includes/footer.html 	modified:   _includes/navbar.html 	new file:   _layouts/applications.html 	modified:   _layouts/blog.html 	modified:   _layouts/default.html 	new file:   _layouts/default.save.html 	modified:   _layouts/home.html 	copied:     _layouts/home.html -> _layouts/home.save.html 	modified:   _layouts/post.html 	modified:   _posts/2015-07-04-welcome-to-jekyll.md 	modified:   _posts/2018-11-20-site-en-cours-de-construction.md 	modified:   _posts/2018-11-23-fabrictation-du-poullailler.md 	modified:   _posts/2018-12-01-mes-applications.md 	modified:   _posts/2018-12-01-woodstock.js-presentation.md 	modified:   _site/404.html 	modified:   _site/about/index.html 	new file:   _site/applications/index.html 	modified:   _site/assets/css/Qambium.css 	modified:   _site/blog/apps/mes-applications.html 	modified:   _site/blog/apps/woodstock.js-presentation.html 	modified:   _site/blog/bricolage/fabrictation-du-poullailler.html 	modified:   _site/blog/home/site-en-cours-de-construction.html 	modified:   _site/blog/index.html 	modified:   _site/blog/jekyll/update/welcome-to-jekyll.html 	modified:   _site/contact/index.html 	modified:   _site/dashboard/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	new file:   applications.md 	modified:   assets/css/Qambium.css

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -4,40 +4,15 @@ layout: default
 
 {%- if site.posts.size > 0 -%}
 
-  <div class="posts">
-    {%- for post in site.posts -%}
+  <div class="container pt-5">
+    <div class="row">
+      <div class="col-md-8 ml-auto mr-auto">
 
-    {% if jekyll.environment == "production" and post.prod == true %}
-      <div class="post">
+        <div class="posts">
+          {%- for post in site.posts -%}
 
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
-
-              <div class="d-flex justify-content-between">
-                <a class="title" href="{{ post.url | relative_url }}">
-                  <h3>{{ post.title | escape }}</h3>
-                </a>
-
-                <span class="date">{%- include date.html -%}</span>
-              </div>
-
-              <p class="excerpt">{{ post.excerpt }}</p>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <!-- .post -->
-    {% endif %}
-
-    {% if jekyll.environment != "production" %}
-      <div class="post">
-
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
+          {% if jekyll.environment == "production" and post.prod == true %}
+            <div class="post">
 
               <div class="d-flex justify-content-between">
                 <a class="title" href="{{ post.url | relative_url }}">
@@ -47,21 +22,41 @@ layout: default
                 <span class="date">{%- include date.html -%}</span>
               </div>
 
-              <p class="excerpt">{{ post.excerpt }}</p>
+              <p class="excerpt">{{ post.description }}</p>
+
 
             </div>
-          </div>
+            <!-- .post -->
+          {% endif %}
+
+          {% if jekyll.environment != "production" %}
+            <div class="post">
+
+              <div class="d-flex justify-content-between">
+                <a class="title" href="{{ post.url | relative_url }}">
+                  <h3>{{ post.title | escape }}</h3>
+                </a>
+
+                <span class="date">{%- include date.html -%}</span>
+              </div>
+
+              <p class="excerpt">{{ post.description }}</p>
+
+
+            </div>
+            <!-- .post -->
+          {% endif %}
+
+
+
+          {%- endfor -%}
+
         </div>
+        <!-- .posts -->
 
       </div>
-      <!-- .post -->
-    {% endif %}
 
-
-
-    {%- endfor -%}
-
+    </div>
   </div>
-  <!-- .posts -->
 
 {%- endif -%}
