--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 
     <ul class="navbar-nav ">
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="https://qambium.fr/Qenobi.js">Qenobi</a>
       </li>
 
@@ -23,11 +23,15 @@
 
       <li class="nav-item">
         <a class="nav-link" href="https://qambium.fr/Woodstock.js">Ecoflore</a>
-      </li>
+      </li> -->
 
     </ul>
 
     <ul class="navbar-nav ml-auto mr-5 ">
+
+      <li class="nav-item">
+        <a class="nav-link {%- if page.categories or page.url contains 'applications' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/applications/' | relative_url }}">Applications</a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/blog/' | relative_url }}">Blog</a>
