Ajout de la sidebar et du dossier _drafts/ ... 	deleted:    404.html 	new file:   404.md 	modified:   _data/applications.yml 	new file:   _drafts/2018-11-23-fabrictation-du-poullailler.md 	renamed:    _posts/2018-12-01-mes-applications.md -> _drafts/2018-12-01-mes-applications.md 	renamed:    _posts/2018-12-01-woodstock.js-presentation.md -> _drafts/2018-12-01-woodstock.js-presentation.md 	new file:   _includes/date-romain.html 	deleted:    _includes/footer.html 	modified:   _includes/navbar.html 	copied:     _includes/navbar.html -> _includes/navbar.save.html 	new file:   _layouts/404.html 	modified:   _layouts/applications.html 	modified:   _layouts/blog.html 	new file:   _layouts/blog.save.html 	new file:   _layouts/contact.html 	modified:   _layouts/default.html 	modified:   _layouts/home.html 	modified:   _layouts/post.html 	deleted:    _posts/2015-07-04-welcome-to-jekyll.md 	modified:   _posts/2018-11-20-site-en-cours-de-construction.md 	deleted:    _posts/2018-11-23-fabrictation-du-poullailler.md 	modified:   _site/404.html 	modified:   _site/about/index.html 	modified:   _site/applications/index.html 	modified:   _site/assets/css/Qambium.css 	new file:   _site/assets/js/qambium.js 	deleted:    _site/blog/apps/woodstock.js-presentation.html 	deleted:    _site/blog/bricolage/fabrictation-du-poullailler.html 	new file:   _site/blog/fabrictation-du-poullailler.html 	modified:   _site/blog/index.html 	deleted:    _site/blog/jekyll/update/welcome-to-jekyll.html 	renamed:    _site/blog/apps/mes-applications.html -> _site/blog/mes-applications.html 	renamed:    _site/blog/home/site-en-cours-de-construction.html -> _site/blog/site-en-cours-de-construction.html 	new file:   _site/blog/woodstock.js-presentation.html 	modified:   _site/contact/index.html 	modified:   _site/dashboard/index.html 	modified:   _site/feed.xml 	modified:   _site/index.html 	modified:   assets/css/Qambium.css 	new file:   assets/js/qambium.js 	modified:   contact.md

--- a/_layouts/applications.html
+++ b/_layouts/applications.html
@@ -1,84 +1,37 @@
 ---
 layout: default
 ---
-{%- if site.posts.size > 0 -%}
 
-  <div class="container pt-5">
-    <div class="row">
-      <div class="col-md-8 ml-auto mr-auto">
-
-        <div class="posts">
-          {%- for app in site.data.applications -%}
-
-
-          <div class="post">
-
-            <div class="d-flex justify-content-between">
-              <a class="title" href="{{ post.url | relative_url }}">
-                <h3>{{ app.name | escape }}</h3>
-              </a>
-
-              <!-- <span class="date">{%- include date.html -%}</span> -->
-            </div>
-
-            <p class="excerpt">{{ app.description }}</p>
-
-            <div>
-              {% if app.link %} <a class="card-link" href="{{app.link}}" class="card-link"><i class="fas fa-mouse-pointer"></i> Voir</a> {% endif %}
-              {% if app.github %} <a class="card-link" href="https://github.com/{{app.github}}" class="card-link"><i class="fas fa-code"></i> Code Source</a> {% endif %}
-              {% if app.more %} <a class="card-link" href="{{app.more}}" class="card-link"><i class="fas fa-question-circle"></i> En savoir plus...</a> {% endif %}
-            </div>
-
-          </div>
-          <!-- .post -->
+<script src="/assets/js/qambium.js" charset="utf-8"></script>
+<div ng-app = "qambium">
 
 
 
-          {%- endfor -%}
+    {%- for app in site.data.applications -%}
 
+
+    <div class="card mb-5">
+      <div class="card-body">
+        <a class="title" href="{{ post.url | relative_url }}">
+          <h3>{{ app.name | escape }}</h3>
+        </a>
+
+        <p class="excerpt">{{ app.description }}</p>
+        <div>
+          {% if app.link %} <a class="card-link" href="{{app.link}}" class="card-link"><i class="fas fa-mouse-pointer"></i> Voir</a> {% endif %}
+          {% if app.github %} <a class="card-link" href="https://github.com/{{app.github}}" class="card-link"><i class="fas fa-code"></i> Code Source</a> {% endif %}
+          {% if app.more %} <a class="card-link" href="{{app.more}}" class="card-link"><i class="fas fa-question-circle"></i> En savoir plus...</a> {% endif %}
         </div>
-        <!-- .posts -->
-
       </div>
 
-    </div>
-  </div>
-
-{%- endif -%}
-
-
-<div class="container mt-5 ">
-  <div class="row">
-    <div class="col-md-8 ml-auto mr-auto">
-
-      <div class="app-list">
-        {% for app in site.data.applications%}
-
-          <div class="card mb-5" >
-            <div class="card-body">
-              <h3 class="card-title">{{app.name}}</h3>
-              <p class="card-text">{{app.description}}</p>
-              <!-- <p class = "">
-                <a class = "card-link" href=""><i class="far fa-hand-pointer"></i> Utiliser</a>
-                <a class = "card-link" href="#"><i class="fas fa-code"></i> Code</a>
-                <a class = "card-link" href="#"><i class="fas fa-info-circle"></i> En savoir plus...</a>
-              </p> -->
-              <p class=""><small class="text-muted">Dernière mise à jour le 8 juillet 2019</small></p>
-            </div>
-            <div class="card-footer">
-
-
-            </div>
-          </div>
-
-
-        {% endfor %}
-
-
-
+      <div class="card-footer text-muted small">
+        <github-repo-lastupdate repo-name = "{{ app.github }}"><github-repo-lastupdate>
       </div>
-
-
     </div>
-  </div>
+
+
+
+    {%- endfor -%}
+ 
+
 </div>
