--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,79 +1,3 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white">
-
-  {%- assign default_paths = site.pages | map: "path" -%}
-  {%- assign page_paths = site.header_pages | default: default_paths -%}
-
-  <a class="ml-5 navbar-brand" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-    <ul class="navbar-nav ">
-
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="https://qambium.fr/Qenobi.js">Qenobi</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="https://qambium.fr/Woodstock.js">Woodstock.js</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="https://qambium.fr/Woodstock.js">Ecoflore</a>
-      </li> -->
-
-    </ul>
-
-    <ul class="navbar-nav ml-auto mr-5 ">
-
-      <li class="nav-item">
-        <a class="nav-link {%- if page.categories or page.url contains 'applications' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/applications/' | relative_url }}">Applications</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/blog/' | relative_url }}">Blog</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link {%- if page.url contains 'contact' -%} {{ ' active' }} {%- endif -%}" href="{{ '/contact/' | relative_url }}">Contact</a>
-      </li>
-
-    </ul>
-
-  </div>
-</nav>
-
-<style media="screen">
-
-  .navbar-brand {
-    /* font-size : 1.4rem !important; */
-    font-weight: 800;
-    text-transform : uppercase;
-  }
-
-  .navbar .navbar-nav .nav-link {
-    text-transform : uppercase;
-    color : rgba(0,0,0,.6);
-  }
-
-  .navbar .navbar-nav .nav-link:hover {
-    text-transform : uppercase;
-    color : rgba(0,0,0,.5);
-  }
-
-  .navbar .navbar-nav .nav-link.active {
-    text-transform : uppercase;
-    color : rgba(0,0,0,.8);
-    padding-bottom : 2px;
-    padding-left :0px;
-    padding-right : 0px;
-    border-bottom : 2px solid var(--green);
-  }
-
-  body {
-    padding-top : 72px;
-  }
-</style>
+<div class="top-brand container ">
+  <a href="/"><h3 style = "font-size : 1.5rem;">Qambium</h3></a>
+</div>
