--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,73 @@
 
   <body>
 
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
 
-    {{ content }}
+      {%- assign default_paths = site.pages | map: "path" -%}
+      {%- assign page_paths = site.header_pages | default: default_paths -%}
 
+      <a class="navbar-brand d-lg-none" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav d-lg-none">
+
+          <li class="nav-item">
+            <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/blog/' | relative_url }}">Blog</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link {%- if page.url contains 'applications' || -%} {{ ' active' }} {%- endif -%}" href="{{ '/applications/' | relative_url }}">Applications</a>
+          </li>
+
+        </ul>
+
+      </div>
+    </nav>
     
+    <div class="wrapper">
+
+      <div class="sidebar d-none d-lg-block">
+
+        <div class="sidebar-title">
+          <h3>Qambium</h3>
+        </div>
+
+        <div class="sidebar-nav d-flex justify-content-end text-right">
+          <nav class="nav menu flex-column ">
+            <a class="nav-link" href="/">Acceuil</a>
+            <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="/blog">Articles</a>
+            <a class="nav-link {%- if page.url contains 'applications' || -%} {{ ' active' }} {%- endif -%}" href="/applications">Applications</a>
+            <a class="nav-link {%- if page.categories or page.url contains 'contact' || -%} {{ ' active' }} {%- endif -%}" href="/contact">Contact</a>
+            <a class="nav-link {%- if page.categories or page.url contains 'a-propos' || -%} {{ ' active' }} {%- endif -%}" href="/a-propos">À propos</a>
+          </nav>
+        </div>
+
+
+      </div>
+
+      <div class="content">
+        <div class="container">
+          {{ content }}
+
+          <nav class="footer nav menu d-lg-none d-flex justify-content-center justify-content-md-start align-items-center ">
+            <a class="nav-link" href="/">Acceuil</a>
+            <a class="nav-link" href="/blog">Articles</a>
+            <a class="nav-link" href="/applications">Applications</a>
+            <a class="nav-link" href="/contact">Contact</a>
+            <a class="nav-link" href="/a-propos">À propos</a>
+          </nav>
+
+        </div>
+      </div>
+    </div>
+
+
+
 
   </body>
 
