--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,17 +1,34 @@
----
-layout: default
----
 
-<div class="site-header d-flex align-items-center justify-content-start" style = "height : calc(100vh - 57px); ">
 
-  <!-- <div class="container"> -->
-    <!-- <div class="d-flex align-items-end justify-content-start"> -->
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "fr" }}">
+
+  {%- include head.html -%}
+
+  <body>
+
+
+    <div class="home">
+
       <div class="container">
         <h1 class = "site-title">{{site.title}}</h1>
         <p class = "lead">{{site.description}}</p>
-        <p class = "text-muted mt-5 text-center">Le site est à une bière ou deux d'être disponible... Revenez nous voir !</p>
-      </div>
-    <!-- </div> -->
-  <!-- </div> -->
+        <!-- <p class = "text-muted mt-5">Le site est à une bière ou deux d'être disponible... Revenez nous voir !</p> -->
 
-</div>
+        <nav class="nav menu">
+          <a class="nav-link" href="/">Acceuil</a>
+          <a class="nav-link" href="/blog">Articles</a>
+          <a class="nav-link" href="/applications">Applications</a>
+          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="/a-propos">À propos</a>
+        </nav>
+
+      </div>
+
+    </div>
+
+
+
+  </body>
+
+</html>
