--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,127 +2,40 @@
 layout: default
 ---
 
-<style media="screen">
 
+<article>
 
+  <div class="container">
 
-  .blog-post header {
-    height : calc(100vh - 72px);
-    display : flex;
-    align-items : center;
-    justify-content : center;
+    <header class = "mb-5 pb-5">
+      <time datetime="{{ page.date | date_to_xmlschema }}">
+        {%- include date-romain.html -%}
+      </time>
+      <h1 id="title">{{ page.title | escape }}</h1>
 
-    /* background : #fcfff5 !important; */
-    border-bottom : 1px solid #eee;
-  }
+      <p id = "description">{{ page.description}}</p>
 
-    .blog-post header time {
-      font-weight : 300;
-      font-size : 1.3rem !important;
+    </header>
 
-    }
-
-    .blog-post header h1 {
-      margin-top : 1rem;
-      font-size : 3rem;
-    }
-
-    .post-description {
-      font-weight : 200;
-      font-size : 1.5rem !important;
-      margin-bottom : 2rem;
-    }
-
-  .blog-post article {
-    padding-top : 3rem;
-  }
-
-    .blog-post article  {
-      /* color : var(--secondary); */
-      font-size : 1.3rem;
-      font-weight : 300;
-    }
-
-</style>
-
-<div class="blog-post">
-
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class = "col-md-10 ml-auto mr-auto">
-
-            <time datetime="{{ page.date | date_to_xmlschema }}">
-              {%- include date.html -%}
-            </time>
-
-          <h1 class="post-title">{{ page.title | escape }}</h1>
-
-          <!-- <p class = "post-description">{{ page.description}}</p> -->
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <article>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 ml-auto mr-auto">
-
-          <p class = "post-description">{{ page.description}}</p>
-
-          {{ content }}
-
-        </div>
-      </div>
+    <div class="content">
+      {{ content }}
     </div>
 
-  </article>
+  </div>
 
-  <style media="screen">
-    .blog-post .author {
-      background : var(--light);
-      margin-top : 3rem;
-      color : #333;
-    }
 
-      .blog-post .author p {
-        font-weight : 200;
-        margin : 0px;
-        font-size : 20px;
-      }
-      .blog-post .author h5 {
-        margin-top : 0;
-        font-size : 2.5rem;
-      }
-  </style>
-
-  <div class="author">
+  <div class="author bg-light">
 
     <div class="container">
-      <div class="col-md-8 ml-auto mr-auto">
-
-        <div class="row pt-5 pb-5 justify-content-center text-center text-sm-left">
-          <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center ">
-            <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
-          </div>
-          <div class="col-sm">
-
-            {% assign author = site.data.members[page.author] %}
-
-            <h5>{{page.author}}</h5>
-            <p>{{author.description}}</p>
-            <p>
-              {% if author.social.instagram %}
-                <a href="{{author.social.instagram}}">@Instagram</a>
-              {% endif %}
-              {% if author.social.email %}
-                <a href="mailto:{{author.social.email}}">@Email</a>
-              {% endif %}
-            </p>
-          </div>
-
+      <div class="row pt-5 pb-5 justify-content-center text-center text-sm-left">
+        <div class="col-6 col-sm-4 col-md-3 col-lg-4 col-xl-3 align-self-center ">
+          <img class="rounded-circle img-fluid" src="http://qambiumflf.cluster021.hosting.ovh.net/ProfileGump.png" alt="">
+        </div>
+        <div class="col-sm">
+          <h5>Marcus</h5>
+          <p>Créateur du site Qambium. Je comprends très vite, mais il faut expliquer longtemps ! :)</p>
+          <a href="https://www.instagram.com/marcusbonus67/">@Instagram</a>
+          <a href="mailto:marc.muller@qambium.fr">@Email</a>
         </div>
 
       </div>
@@ -132,54 +45,40 @@ layout: default
   </div>
   <!-- .authors -->
 
-  <style media="screen">
-    .blog-post .comments {
-      margin-top : 3rem;
-      margin-bottom : 3rem;
-    }
-  </style>
+
 
   <div class="comments">
     <div class="container">
-      <div class="row">
-        <div class="col-md-8 ml-auto mr-auto">
 
-          {% if jekyll.environment == "production" %}
+      {% if jekyll.environment == "production" %}
 
-          <div id="disqus_thread"></div>
-          <script>
-            var disqus_config = function () {
-              this.page.url = '{{ page.url | absolute_url }}';
-              this.page.identifier = '{{ page.url | absolute_url }}';
-            };
-            (function() {
-              var d = document, s = d.createElement('script');
-              s.src = 'https://{{ site.disqus.shortname }}.disqus.com/embed.js';
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>
-            <div class="alert alert-danger">
-              Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a>
-            </div>
-          </noscript>
+        <div id="disqus_thread"></div>
+        <script>
+          var disqus_config = function () {
+            this.page.url = '{{ page.url | absolute_url }}';
+            this.page.identifier = '{{ page.url | absolute_url }}';
+          };
+          (function() {
+            var d = document, s = d.createElement('script');
+            s.src = 'https://qambium.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+          })();
+        </script>
+        <noscript>
+          <div class="alert alert-danger">
+            Merci d'activer javascript pour voir les commentaires <a href="https://disqus.com/?ref_noscript" rel="nofollow">Disqus.</a>
+          </div>
+        </noscript>
 
-          {% else %}
+      {% endif %}
 
-            <div class="alert alert-danger">
-              Disqus est disponible uniquement en mode production.
-            </div>
 
-          {% endif %}
 
-        </div>
-
-      </div>
     </div>
     <!-- .container -->
 
   </div>
   <!-- .comments -->
 
-</div>
+</article>
