Bug dans le menu de la sidebar... 	modified:   _layouts/default.html 	modified:   _site/404.html 	modified:   _site/about/index.html 	modified:   _site/applications/index.html 	modified:   _site/blog/fabrictation-du-poullailler.html 	modified:   _site/blog/index.html 	modified:   _site/blog/mes-applications.html 	modified:   _site/blog/site-en-cours-de-construction.html 	modified:   _site/blog/woodstock.js-presentation.html 	modified:   _site/contact/index.html 	modified:   _site/dashboard/index.html 	modified:   _site/feed.xml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
       </div>
     </nav>
-    
+
     <div class="wrapper">
 
       <div class="sidebar d-none d-lg-block">
@@ -46,8 +46,8 @@
             <a class="nav-link" href="/">Acceuil</a>
             <a class="nav-link {%- if page.categories or page.url contains 'blog' || -%} {{ ' active' }} {%- endif -%}" href="/blog">Articles</a>
             <a class="nav-link {%- if page.url contains 'applications' || -%} {{ ' active' }} {%- endif -%}" href="/applications">Applications</a>
-            <a class="nav-link {%- if page.categories or page.url contains 'contact' || -%} {{ ' active' }} {%- endif -%}" href="/contact">Contact</a>
-            <a class="nav-link {%- if page.categories or page.url contains 'a-propos' || -%} {{ ' active' }} {%- endif -%}" href="/a-propos">À propos</a>
+            <a class="nav-link {%- if page.url contains 'contact' || -%} {{ ' active' }} {%- endif -%}" href="/contact">Contact</a>
+            <a class="nav-link {%- if page.url contains 'a-propos' || -%} {{ ' active' }} {%- endif -%}" href="/a-propos">À propos</a>
           </nav>
         </div>
 
