Mise à jour page d'acceuil 	modified:   _layouts/home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,11 +16,7 @@
         <!-- <p class = "text-muted mt-5">Le site est à une bière ou deux d'être disponible... Revenez nous voir !</p> -->
 
         <nav class="nav menu">
-          <a class="nav-link" href="/">Acceuil</a>
-          <a class="nav-link" href="/blog">Articles</a>
-          <a class="nav-link" href="/applications">Applications</a>
-          <a class="nav-link" href="/contact">Contact</a>
-          <a class="nav-link" href="/a-propos">À propos</a>
+          <a class="nav-link" href="https://qambium.fr/SQolytes/">SQolytes</a>
         </nav>
 
       </div>
