--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,7 @@
 
         <nav class="nav menu">
           <a class="nav-link" href="https://qambium.fr/SQolytes/">SQolytes</a>
+          <a class="nav-link" href="https://qambium.fr/plotter/">Plotter</a>
         </nav>
 
       </div>
